Bug 207102 Sound preview doesn't work if its path contains non-ASCII string r=amardare+jshin, sr=roc