widget/src/xlib/nsSound.cpp
@@ -105,7 +105,7 @@ NS_METHOD nsSound::Play(nsIURL *aURL)
   return NS_OK;
 }
 
-NS_IMETHODIMP nsSound::PlaySystemSound(const char *aSoundAlias)
+NS_IMETHODIMP nsSound::PlaySystemSound(const nsAString &aSoundAlias)
 {
   return Beep();
 }
